# ClawGuard-Pi.AI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  action_registry.py  app.py  audit_log.py  policy_engine.py
docs/: architecture.md  raspberry-pi-setup.md  threat-model.md
frontend/: app.js  index.html  styles.css
scripts/: run_local.sh
simulator/: __init__.py  sample_agent_events.json  virtual_gpio.py
tests/: test_action_registry.py  test_policy_engine.py
